--- a/woda.html
+++ b/woda.html
@@ -14,13 +14,16 @@
     <div id="lewo">    
        <div id="formularz"> Oferta handlowa :   <table>
             <tr>
-               <td>woda żywiec</td> <td>1,50zł/1,5l</td> 
+               <td>woda Bonaqua</td> <td>2zł/1,5l</td> 
             </tr>
             <tr>
-               <td>woda muszynianka</td> <td>1,70zł/1,5l</td> 
+               <td>woda Kropla</td> <td>3zł/1,5l</td> 
             </tr>
             <tr>
-               <td>woda cisowianka</td> <td>1,55zł/1,5l</td> 
+               <td>woda Cisowianka</td> <td>4zł/1,5l</td> 
+            </tr>
+            <tr>
+               <td>woda kranowa</td> <td>5zł/1,5l</td> 
             </tr>
          </table> Formularz Zakupów:
             <p>
